--- a/qtify/src/components/Button/Button.module.css
+++ b/qtify/src/components/Button/Button.module.css
@@ -6,6 +6,7 @@
     border-radius: 8px;
     font-weight: bold;
     height: 46px;
+    font-family: var(--font-family);
   }
   
   .button:hover {
