--- a/qtify/src/components/Card/Card.module.css
+++ b/qtify/src/components/Card/Card.module.css
@@ -1,41 +1,40 @@
 .card {
-    width: 100%;
-    height: 100%; /* Adjust the height to make it smaller */
-    background-color: var(--color-black);
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    cursor: pointer;
+  width: 100%; /* Ensure a fixed width */
+  height: 300px; /* Ensure a fixed height */
+  box-sizing: border-box;
+  background-color: var(--color-black);
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  cursor: pointer;
 }
 
-.cardContent{
-    overflow: hidden;
-    z-index: 0;
-    background-color: var(--color-text);
-    border-radius: 10px;
+.cardContent {
+  overflow: hidden;
+  z-index: 0;
+  background-color: var(--color-text);
+  border-radius: 10px;
+  width: 100%;
 }
 
 .cardImage {
-    width: 100%;
-    height: 85%; /* Reduce the image size */
-    object-fit: cover;
+  width: 100%;
+  height: 80%; /* Reduce the image size */
+  object-fit: cover;
 }
 
-  
-
-.title{
-    color: var(--color-text);
-    font-family: var(--font-family);
-    word-break: break-all;
-    font-size: 14px; /* Reduce font size to fit smaller cards */
+.title {
+  color: var(--color-text);
+  font-family: var(--font-family);
+  word-break: break-all;
+  font-size: 14px; /* Reduce font size to fit smaller cards */
 }
 
 .chip {
-    padding-left: 10px;
-    padding-top: 5px;
-    display: flex;
-    align-items: center;
-    z-index: 1;
-   
+  padding-left: 10px;
+  padding-top: 5px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
 }
