--- a/qtify/src/components/Section/Section.module.css
+++ b/qtify/src/components/Section/Section.module.css
@@ -1,35 +1,31 @@
 .section {
-    background-color: var(--color-black);
-    margin: 0;
-    padding: 10px;
-    overflow: hidden;
-    border-bottom: 1px solid var(--color-primary);
-}
-
-.album-grid {
-    background-color: var(--color-black) !important;
-    margin: 0;
-}
-
-.sectionContent{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.title{
-    color: var(--color-text);
-    font-family: var(--font-family);
-    font-weight: bold;
+  background-color: var(--color-black);
+  margin: 0;
+  padding: 10px;
+  overflow: hidden;
+  border-bottom: 1px solid var(--color-primary);
+  transition: 0.3ms ease-out;
 }
 
 .gridcontainer {
-    background-color: var(--color-black);
-    width: 100%; /* Take full width */
-    margin: 0; /* Remove any additional margins */
-    overflow: hidden;
-}
-.button{
-    display: none;
+  background-color: var(--color-black) !important;
+  width: 100%; /* Take full width */
+  margin: 0; /* Remove any additional margins */
+  overflow: hidden;
 }
 
+.sectionContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-weight: bold;
+}
+
+.button {
+  display: none;
+}
