--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -36,6 +36,15 @@
   height: 48px;
   box-sizing: border-box;
   flex-shrink: 0;
+  -webkit-appearance: none; /* Disables default button appearance in iOS */
+  appearance: none;
+  outline: none; /* Removes the blue outline */
+}
+.search:focus {
+  outline: none; /* Prevents outline on focus in iOS */
+}
+.searchButton:focus {
+  outline: none; /* Prevents outline on focus in iOS */
 }
 
 /* For desktop */
