--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -36,15 +36,12 @@
   height: 48px;
   box-sizing: border-box;
   flex-shrink: 0;
-  -webkit-appearance: none !important; /* Disables default button appearance in iOS */
-  appearance: none !important;
-  outline: none !important; /* Removes the blue outline */
 }
 .search:focus {
-  outline: none !important; /* Prevents outline on focus in iOS */
+  outline: none; /* Prevents outline on focus in iOS */
 }
 .searchButton:focus {
-  outline: none !important; /* Prevents outline on focus in iOS */
+  outline: none; /* Prevents outline on focus in iOS */
 }
 
 /* For desktop */
