--- a/src/components/FeedbackForm/FeedbackForm.css
+++ b/src/components/FeedbackForm/FeedbackForm.css
@@ -44,8 +44,9 @@
   font-size: 16px;
   cursor: pointer;
   font-family: var(--font-family);
+  font-weight: bold;
 }
 
 .feedback-form-container button:hover {
-  background-color: var(--color-primary);
+  background-color: #34c94ae6;
 }
